-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
-
fe4b246446f721085946e399b96a42eccfcecca8 (qt/qtbase/dev) 12312ab31fec0ba794c962a66bbd5ab915247f52 (qt/qtbase/5.15.1) fb6f62354ff8d29152db7cfa479b2689a25ae7a9 (qt/tqtc-qtbase/5.15)
Queued connections don't seem to work if there are nested event loops. Apparently posted events are getting stuck. I am guessing it is caused by "QEventDispatcherWin32: fix posted events delivering" e0d80167c18b5a71acf4dac59f3e6f37292fa397 https://codereview.qt-project.org/c/qt/qtbase/+/294403
For Gerrit Dashboard: QTBUG-85981 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
310626,3 | Synchronize QEventDispatcherWin32::processEvents() with QCoreApplication | dev | qt/qtbase | Status: MERGED | +2 | 0 |
311580,2 | Synchronize QEventDispatcherWin32::processEvents() with QCoreApplication | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
311760,3 | Synchronize QEventDispatcherWin32::processEvents() with QCoreApplication | 5.15.1 | qt/qtbase | Status: MERGED | +2 | 0 |